# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./cases";
 export * from "./messages";
 export * from "./services";
 export * from "./users";
+export * from "./documents";
